[package]
name = "httpipe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
clap = { version = "4", features = ["derive", "env"] }
flume = "0.11"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
codegen-units = 1
lto = true
